# elise-svn

trunk/: Makefile.am  configure.in
trunk/src/: Makefile.am  Makefile.in  client.c  client.h  elise.c  elise.h  error.c  error.h  event.c  event.h  list.c  list.h  screen.c  screen.h
