AC_INIT(src/elise.c)
AM_INIT_AUTOMAKE(elise, 0.1, no-define)

AC_PROG_CC
AC_PROG_INSTALL

AC_HEADER_STDC

dnl Check for X headers and libraries
AC_PATH_X
AC_PATH_XTRA

LIBS="$LIBS $X_LIBS"
LDFLAGS="$LDFLAGS $LIBS $X_PRE_LIBS"

AC_CHECK_LIB(X11, XOpenDisplay,
  LIBS="$LIBS -lX11",
  AC_MSG_ERROR([Could not find XOpenDisplay in -lX11.])
)

dnl Check whether to include debugging code
DEBUG=""
AC_MSG_CHECKING([whether to include verbose debugging code])
AC_ARG_ENABLE(debug,
    [  --enable-debug          include verbose debugging code [default=no]],
    if test x$enableval = "xyes"; then
        AC_MSG_RESULT([yes])
        DEBUG="-g -DDEBUG"
    else
        AC_MSG_RESULT([no])
    fi,
    AC_MSG_RESULT([no])
)   
AC_SUBST(DEBUG)
CFLAGS="$CFLAGS $X_CFLAG $DEBUG"

AC_OUTPUT(Makefile
src/Makefile
)
